src_old/objects/Retailer__c.object
<CustomObject>
    <description>Retailer stores the retailers for the system. Retailer is related to Location, Retailer Service, Retailer Service Certification, and Retailer Service Equipment.</description>
    <fields>
        <fullName>FulfillmentLeadTime__c</fullName>
        <label>Fulfillment Lead Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobCancelLeadTime__c</fullName>
        <label>Job Cancel Lead Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogoHeight__c</fullName>
        <label>Logo Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogoURL__c</fullName>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OneHubRetailerId__c</fullName>
        <label>One Hub Retailer ID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjectCancelLeadTime__c</fullName>
        <label>Project Cancel Lead Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetAcquiredDefault__c</fullName>
        <label>Target Acquired Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Donated</fullName>
                </value>
                <value>
                    <fullName>Kitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Retailers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isMaterialReqd__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To determine if materials are needed for this retailer.</description>
        <label>Is Material Reqd</label>
        <type>Checkbox</type>
    </fields>
    <label>Retailer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retailers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>